# Games

./: .gitignore  CMakeLists.txt  README.md
include/core/: Database.h  GameBase.h  GameMetadata.h  GameRegistry.h  GameRunner.h
include/games/: BreakoutGame.h  BullsCowsGame.h  PongGame.h  SnakeGame.h
include/ui/: CreateGameDialog.h  GameCard.h  HubView.h  MainWindow.h  ScoreboardDialog.h
include/utils/: Logger.h  MemoryUtils.h
src/: main.cpp
src/core/: Database.cpp  GameRegistry.cpp  GameRunner.cpp
src/games/: BreakoutGame.cpp  BullsCowsGame.cpp  PongGame.cpp  SnakeGame.cpp
src/ui/: CreateGameDialog.cpp  GameCard.cpp  HubView.cpp  MainWindow.cpp  ScoreboardDialog.cpp
src/utils/: Logger.cpp  MemoryUtils.cpp
